# economics-assistant-manager

./: LICENSE  README.md  pyproject.toml
app/: main.py
app/data/: transactions.csv
app/routes/: manager.py
app/schemas/: base.py  manager.py
app/services/: manager.py
