[project]
name = "economics-assistant-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Fortes",email = "rafaeldsfortes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.138.0,<0.139.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.fastapi]             
entrypoint = "app.main:app"